--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,11 +7,11 @@
   <h1>
     <%= locals.title %>
   </h1>
-  <form action="/new" method="post">
+  <form id="message-form" action="/new" method="post">
     <label for="username">
       Username
     </label>
-    <input id="username" type="text" name="user" minlength="2" maxlength="24" required>
+    <input id="username" type="text" name="user" minlength="2" maxlength="24" placeholder="Enter your username..." required>
     <label for="message">
       Message
     </label>
