Wrap in main element the ejs files

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,17 +7,20 @@
   <h1>
     <%= locals.title %>
   </h1>
-  <form id="message-form" action="/new" method="post">
-    <label for="username">
-      Username
-    </label>
-    <input id="username" type="text" name="user" minlength="2" maxlength="24" placeholder="Enter your username..." required>
-    <label for="message">
-      Message
-    </label>
-    <textarea name="text" id="message" cols="30" rows="10" minlength="2" maxlength="3000" placeholder="Enter your message here..." required></textarea>
-    <button>Submit</button>
-  </form>
+
+  <main>
+    <form id="message-form" action="/new" method="post">
+      <label for="username">
+        Username
+      </label>
+      <input id="username" type="text" name="user" minlength="2" maxlength="24" placeholder="Enter your username..." required>
+      <label for="message">
+        Message
+      </label>
+      <textarea name="text" id="message" cols="30" rows="10" minlength="2" maxlength="3000" placeholder="Enter your message here..." required></textarea>
+      <button>Submit</button>
+    </form>
+  </main>
 </body>
 
 </html>
