--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
       <% }); %>
     </ul>
     <% } else { %>
-    <p>There are currently no messages.</p>
+    <p class="no-messages">There are currently no messages.</p>
     <% } %>
   </main>
 </body>
