--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,23 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+
+<html lang="en">
+<%- include('partials/head') %>
+
+<body>
+  <h1>
+    Mini Message Board
+  </h1>
+
+  <%- include('partials/nav.ejs') %>
+
+  <main>
+    <h2><%= locals.title %></h2>
+    <p class="error-message">The page or resource you're trying to access is either unavailable or does not exist!</p>
+    <% if (locals.error && locals.error.stack) { %>
+    <h3>Stack Trace</h3>
+    <pre><%= locals.error.stack %></pre>
+    <% } %>
+  </main>
+</body>
+
+</html>
