--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,6 +98,17 @@ ul {
   font-size: 1.2rem;
 }
 
+.message .dev-flair {
+  display: inline-block;
+  font-size: 0.8rem;
+  background-color: black;
+  color: white;
+  border-radius: 4px;
+  padding: 4px 8px;
+  position: relative;
+  top: -2px;
+}
+
 .message .date-added,
 .message .postfix {
   color: gray;
