--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -101,7 +101,10 @@ ul {
 .message .text {
   overflow: hidden;
   white-space: pre-wrap;
-  word-break: break-all;
+  word-break: break-word;
+  background-color: hsl(0, 0%, 82%);
+  border-radius: 8px;
+  padding: 16px;
 }
 
 .message .dev-flair {
